--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 data/Household_Travel_Survey_Households.csv
 data/Household_Travel_Survey_Persons.csv
 data/Household_Travel_Survey_Trips.csv
-Data/od_data
+data/od_data
 .DS_Store
