--- a/environment.yml
+++ b/environment.yml
@@ -1,16 +1,15 @@
-name: example-environment
+name: base
 channels:
-  - conda-forge
+  - defaults
 dependencies:
-  - python=3.11
-  - pandas
-  - numpy
-  - matplotlib
-  - seaborn
-  - datetime
-  - statsmodels
-  - geopandas
-  - requests
-  - pyproj
-  - geopy
-  - math
+  - conda
+  - python=3.9
+  - python.app
+  - conda-env
+  - conda-build
+  - conda-verify
+  - _ipyw_jlab_nb_ext_conf
+  - anaconda==2022.05=py39_0
+  - anaconda-navigator==2.3.2
+  - navigator-updater
+prefix: /Users/kaitlynng/opt/anaconda3
